# ProtocolTools

./: .gitignore  .gitmodules  CMakeLists.txt  CdtTools-Solution.pro  PressPlateTool.desktop  ProtocolTools-Solution.pro  ProtocolTools.desktop  README.md  appveyor.yml
CdtTools/: CMakeLists.txt  CdtTools.pro  CdtTools_en.ts  CdtTools_zh.qm  CdtTools_zh.ts  enums.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
CdtTools/common/: CMakeLists.txt  ptcfg.cpp  ptcfg.h  saveconfig.cpp  saveconfig.h  threadpool.cpp  threadpool.h  util.cpp  util.h  workerthread.cpp
CdtTools/network/: CMakeLists.txt  networkbase.cpp  networkbase.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  udpsocket.cpp  udpsocket.h
CdtTools/protocol/: CMakeLists.txt  cdtcycle.cpp  cdtcycle.h  cdtexnr.cpp  cdtexnr.h  cdtexut.cpp  cdtexut.h  cdtframe.cpp  cdtframe.h  cdtinteracte.cpp  cdtinteracte.h  cdtprotocol.cpp  cdtprotocol.h  checkhelper.cpp  checkhelper.h  frame.h  protocolbase.cpp  protocolbase.h  strategybase.cpp  strategybase.h
CdtTools/protocol/cycle/: CMakeLists.txt  cdtcycle.cpp  cdtcycle.h  cdtstandard.h  cyclemintorstrategy.cpp  cyclemintorstrategy.h  cyclewfstrategy.cpp  cyclewfstrategy.h  standardmintorstrategy.cpp  standardmintorstrategy.h  standardwfstrategy.cpp
CdtTools/protocol/interacte/: CMakeLists.txt  cdtinteracte.cpp  cdtinteracte.h  intermintorstrategy.cpp  intermintorstrategy.h  interwfstrategy.cpp  interwfstrategy.h
CdtTools/protocol/nr/: CMakeLists.txt  cdtexnr.cpp  cdtexnr.h  nrmintorstrategy.cpp  nrmintorstrategy.h  nrwfstrategy.cpp  nrwfstrategy.h
CdtTools/protocol/nrudp/: nrudpframe.cpp  nrudpmintorstrategy.cpp  nrudpprotocol.cpp  nrudpprotocol.h  nrudpwfstrategy.cpp  nrudpwfstrategy.h
CdtTools/protocol/standard/: CMakeLists.txt  cdtmintorstrategy.cpp  cdtmintorstrategy.h  cdtprotocol.cpp  cdtprotocol.h  cdtwfstrategy.cpp  cdtwfstrategy.h
CdtTools/protocol/ut/: CMakeLists.txt  cdtexut.cpp  cdtexut.h  utmintorstrategy.cpp  utmintorstrategy.h  utwfstrategy.cpp  utwfstrategy.h
CdtTools/translations/: CdtTools_zh.qm
CdtTools/ui/: CMakeLists.txt  cdtsettingdlg.cpp  cdtsettingdlg.h  cdtsettingdlg.ui  cdtwidget.ui  cdtworkwidget.cpp  cdtworkwidget.h  cdtworkwidget.ui  clientpage.cpp  clientpage.h  floatbuttongroup.cpp  floatbuttongroup.h  ptcfg.cpp  ptcfg.h  serverpage.cpp  serverpage.h  tabpage.cpp  tabpage.h  tabpage.ui  udppage.cpp  udppage.h
CdtTools/ui/dialog/: cyclesenddialog.cpp  cyclesenddialog.h  nameddialog.cpp  nameddialog.h  ykdialog.cpp  ykdialog.h
CdtTools/ui/tables/: CMakeLists.txt  aidata.cpp  aidata.h  aitablemodel.cpp  aitablemodel.h  didata.cpp  didata.h  ditablemodel.cpp  ditablemodel.h
Communication/: CMakeLists.txt  Communication.pro  communication_global.h  communicationbase.cpp  communicationbase.h  portparam.cpp  portparam.h  qmlserialporthelper.cpp  qmlserialporthelper.h  serialport.cpp  serialport.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  udpsocket.cpp  udpsocket.h
PressPlateTool/: CMakeLists.txt  PressPlateTool-cmake_en.ts  PressPlateTool-cmake_zh.ts  PressPlateTool.pro  PressPlateTool_en.ts  PressPlateTool_zh.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmlexport.cpp  qmlexport.h  qmlmain.cpp
PressPlateTool/common/: CMakeLists.txt  common.pri  gatherdata.cpp  gatherdata.h  threadpool.h  ybsensordata.cpp  ybsensordata.h
PressPlateTool/controller/: CMakeLists.txt  controller.pri  controllermanager.cpp  controllermanager.h  gathercontroller.cpp  gathercontroller.h  sensorcontroller.cpp  sensorcontroller.h
PressPlateTool/model/: CMakeLists.txt  gatherconfiguremodel.cpp  gatherconfiguremodel.h  gatherdata.cpp  gatherdata.h  model.pri  sensorconfiguremodel.cpp  sensorconfiguremodel.h  ybsensordata.cpp  ybsensordata.h
PressPlateTool/protocol/: CMakeLists.txt  iprotocol.cpp  iprotocol.h  protocol.pri  protocolchannelbase.cpp  protocolchannelbase.h  utilhelper.cpp  utilhelper.h  ybframe.cpp  ybframe.h  ybprotocol.cpp  ybprotocol.h  ybprotocolchannel.cpp  ybprotocolchannel.h
PressPlateTool/provider/: CMakeLists.txt  faiconprovider.cpp  faiconprovider.h
PressPlateTool/resources/: resources.qrc
PressPlateTool/ui/: editableeventfilter.cpp  editableeventfilter.h  expandtile.cpp  expandtile.h  expandwidget.cpp  expandwidget.ui  expandwidgetitem.cpp  gatherdetailpage.cpp  gatherdetailpage.h  gatherdetailpage.ui  notificationbtn.cpp  notificationbtn.h  ui.pri
ProtocolTool/: CMakeLists.txt  ProtocolTool.pro  ProtocolTool_en.ts  ProtocolTool_zh.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
ProtocolTool/common/: CMakeLists.txt  aidata.cpp  aidata.h  common.pri  didata.cpp  didata.h  enums.h  ptcfg.cpp  ptcfg.h  threadpool.cpp  threadpool.h  util.cpp  util.h  workerthread.cpp  workerthread.h
ProtocolTool/protocol/: CMakeLists.txt  cdtframe.cpp  cdtframe.h  checkhelper.cpp  checkhelper.h  protocol.pri  protocolbase.cpp  protocolbase.h  strategybase.cpp  strategybase.h
ProtocolTool/translations/: ProtocolTool_en.qm  ProtocolTool_zh.qm
ProtocolTool/ui/: CMakeLists.txt  cdtsettingdlg.cpp  cdtsettingdlg.h  cdtsettingdlg.ui  cdtworkwidget.cpp  cdtworkwidget.h  cdtworkwidget.ui  clientpage.cpp  clientpage.h  serialportpage.cpp  serialportpage.h  serverpage.cpp  serverpage.h  tabpage.cpp  tabpage.h  tabpage.ui  udppage.cpp  udppage.h  ui.pri
Protocols/: CMakeLists.txt  Protocols.pro  convert.cpp  convert.h  iprotocols.cpp  iprotocols.h  protocols_global.h
Protocols/YBProtocol/: CMakeLists.txt  YBProtocol.pri  ybframe.cpp  ybframe.h  ybframeenums.h  ybprotocol.cpp  ybprotocol.h  ybprotocolexception.cpp  ybprotocolexception.h
QtMaterialIcon/: CMakeLists.txt  QMaterialIcon.qrc
QtMaterialIcon/includes/: materialiconprovider.h  qmaterialicon.h
QtMaterialIcon/src/: materialiconprovider.cpp  qmaterialicon.cpp
qt-material-widgets/: CMakeLists.txt  qt-material-widgets.pro  qtmaterialdropdownbutton.cpp  qtmaterialdropdownbutton.h  qtmaterialdropdownbutton_p.h
qt-material-widgets/layouts/: CMakeLists.txt
qt-material-widgets/lib/: CMakeLists.txt
(+366 files in other folders)
