cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)

project(ProtocolTools-Solution)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(QtAwesome)
add_subdirectory(Qaterial)
add_subdirectory(Communication)
add_subdirectory(Protocols)
add_subdirectory(asyncfuture)
add_subdirectory(PressPlateTool)
# add_subdirectory(ProtocolTools)
